--- a/forex/sass/blocks/features.scss
+++ b/forex/sass/blocks/features.scss
@@ -47,25 +47,30 @@
 
 @media screen and ($tablet-widths) {
   .features__flex {
-    flex-wrap: wrap;
+    flex-direction: column;
   }
   
   .features__download {
-    margin: auto;
-    padding-top: 50px;
+    justify-content: center;
+    padding-top: 25px
+  }
+  
+  .features__list {
+    
+    & ul {
+      width: auto;
+    }
   }
   
   .features__box {
     padding-top: 130px;
     
     & p {
-      margin-bottom: 30px;
-      color: $sc;
+      color: #fff;
     }
     
     & p > a {
       color: $sc;
-      text-decoration: none;
     }
   }
 }
@@ -87,6 +92,7 @@
   
   .features__download {
     flex-direction: column;
+    align-items: center;
   }
   
   .features__box {
