--- a/forex/templates/platforms.html
+++ b/forex/templates/platforms.html
@@ -82,7 +82,7 @@
       </div>
     </section>
     <section class="features">
-      <div class="container">
+      <div class="container  container--features">
         <h3>Forex24 MT4 Features</h3>
         <div class="features__flex">
           <div class="features__list">
@@ -114,7 +114,7 @@
       </div>
     </section>
     <section class="trader">
-      <div class="container">
+      <div class="container  container--trader">
         <h3>Webtrader</h3>
         <b>Smart features</b>
         <div class="trader__list">
@@ -175,15 +175,16 @@
         <h2>Mobile</h2>
         <b>User-friendly and Intuitive for Novices and Pros</b>
         <p class="mobile__title">Follow your trades on your mobile device of choice— iOS, Android & Windows Phone. Forex24 Global has developed this state of the art Mobile Application to be versatile enough to meet the needs of both beginners and seasoned professionals alike. You will enjoy using the clean, straightforward and intuitively designed user interface.</p>
-        <div class="mobile__flex-first">
-          <div class="mobile__left">
-            <b>Auto-Update</b>
-            <p>The Forex24 Global Mobile App performs updatesи automatically, ensuring that the user is always up to date with the latest version of the platform.</p>
-          </div>
-          <div class="mobile__right">
-            <b>Customizable Menus</b>
-            <p>Menus in the app are customizable to meet the specific needs of our clients.</p>
-          </div>
+        
+      </div>
+      <div class="mobile__flex-first">
+        <div class="mobile__left">
+          <b>Auto-Update</b>
+          <p>The Forex24 Global Mobile App performs updatesи automatically, ensuring that the user is always up to date with the latest version of the platform.</p>
+        </div>
+        <div class="mobile__right">
+          <b>Customizable Menus</b>
+          <p>Menus in the app are customizable to meet the specific needs of our clients.</p>
         </div>
       </div>
       <div class="mobile__flex-second">
