--- a/forex/sass/blocks/desktop.scss
+++ b/forex/sass/blocks/desktop.scss
@@ -16,10 +16,17 @@
   & h4 {
     margin-bottom: 0;
     font-size: 25px;
+    opacity: 0.6;
+  }
+  
+  & p {
+    font-weight: 500;
+    opacity: 0.8;
   }
   
   & b {
     font-size: 25px;
+    opacity: 0.6;
   }
 }
 
@@ -29,9 +36,9 @@
   
   & ul {
     width: auto;
-    padding-left: 25px;
     color: #000;
-    font-weight: 400;
+    font-weight: 700;
+    opacity: 0.9;
   }
 }
 
