--- a/forex/templates/desktop.html
+++ b/forex/templates/desktop.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Desktop - Forex 24</title>
-  <!-- <link rel="stylesheet" href="js/slick/slick.css"/> -->
-  <!-- <link rel="stylesheet" href="js/slick/slick-theme.css"/> -->
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -34,13 +32,13 @@
       </div>
     </nav>
   </header>
-  <section class="page-header__sub-menu">
+  <section class="sub-menu">
     <div class="container">
-      <div class="page-header__sub-flex">
+      <div class="sub-menu__flex">
         <p>Platforms</p>
-        <div class="page-header__sub-box  page-header__sub-box--about">
-          <a class="page-header__logo-menu" href="../index.html">
-            <img src="../img/logo-menu.png" alt="">
+        <div class="sub-menu__box  sub-menu__box--about">
+          <a class="sub-menu__logo" href="../index.html">
+            <img src="../img/logo-menu.png" alt="Forex24">
           </a>
           <a href="#">ACCOUNT TYPES</a>
           <a href="#">ACCOUNT COMPARISON</a>
@@ -48,21 +46,26 @@
           <a href="#">TRADING SPECIFICATION</a>
           <a href="#">FUNDING AND WITHDROVAL</a>
           <a href="#">ANNOUNCEMENTS</a>
-          <button class="page-header__arrow"></button>
+          <div class="sub-menu__social">
+            <a class="sub-menu__link  sub-menu__link--facebook" href="#"></a>
+            <a class="sub-menu__link  sub-menu__link--google" href="#"></a>
+            <a class="sub-menu__link  sub-menu__link--youtube" href="#"></a>
+            <a class="sub-menu__link  sub-menu__link--linkedin" href="#"></a>
+            <a class="sub-menu__link  sub-menu__link--twitter" href="#"></a>
+          </div>
+          <hr>
+          <button class="sub-menu__arrow"></button>
         </div>
       </div>
     </div>
   </section>
-  <section class="platform">
+  <section class="platforms-desktop">
     <div class="container">
       <h1>DESKTOP</h1>  
       <b>Mt4 Desktop</b>    
-      <div class="platform__middle">
-        <p>MetaTrader is the most popular front-end application in the industry. Forex24 MT4 has taken the MetaTrader MT4 platform and introduced its liquidity to create a user-friendly front-end trading interface with interbank liquidity and fast execution.</p>
-        <div class="platform__icon"></div>
-      </div>
-      <div class="platform__bottom">
-        <b>Benefits</b>
+      <p>MetaTrader is the most popular front-end application in the industry. Forex24 MT4 has taken the MetaTrader MT4 platform and introduced its liquidity to create a user-friendly front-end trading interface with interbank liquidity and fast execution.</p>
+      <b>Benefits</b>
+      <div class="platforms-desktop__flex">
         <ul>
           <li>Ease of use through its user friendly interface</li>
           <li>Multiple charting and analysis</li>
@@ -75,14 +78,13 @@
           <li>Trading from charts & monitor active orders on the chart</li>
           <li>Advanced analysis tools</li>
         </ul>
-        <a class="platform__download" href="#">download mt4</a>
+        <a class="platforms-desktop__download" href="#">download mt4</a>
       </div>
-      <p class="about__pb">Naturally, the aim of Forex trading is to earn more money than you`ve invested. Therefore at Forex24 Global , one of our main goals is to empower you to fulfil this goals. Everything you need in order to make it is here, the rest is up to you. All the features of the website have been specially designed to aid our users. Our passion towards our customers is our main drive and what leads us forward. Trading involves risks of loss, for further information please read our Risk Disclosure.</p>
     </div>
   </section>
-  <div class="account__pay">
-    <img src="../img/pay-sprite.png" alt="">
-  </div>
+  <section class="payment  payment--temp">
+    <div class="payment__box"></div>
+  </section>
   <footer class="page-footer">
     <div class="container">
       <div class="page-footer__flex">
@@ -143,8 +145,6 @@
       </div>
     </div>
   </footer>
-<!-- <script src="js/jquery.min.js"></script> -->
-<!-- <script src="js/slick/slick.min.js"></script> -->
 <script src="../js/mobile-menu.js"></script>
 </body>
 </html>
