--- a/forex/css/style.css
+++ b/forex/css/style.css
@@ -2666,3 +2666,57 @@ button[type="submit"] {
     margin-top: 30px;
     padding: 15px 50px;
     font-size: 22px; } }
+
+.platforms-web {
+  padding: 50px 0; }
+  .platforms-web h1 {
+    margin-top: 0;
+    color: #2e2963;
+    font-size: 30px; }
+  .platforms-web b {
+    font-size: 22px; }
+  .platforms-web ul {
+    list-style-image: url("../img/li.png"); }
+
+.platforms-web__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+  .platforms-web__flex ul {
+    width: 40%; }
+
+.platforms-web__download {
+  -ms-flex-item-align: center;
+  align-self: center;
+  padding: 15px 70px;
+  color: #2e2963;
+  font-size: 25px;
+  font-weight: bold;
+  text-decoration: none;
+  text-transform: uppercase;
+  -webkit-box-shadow: 5px 5px 2px 0px rgba(121, 121, 121, 0.5);
+  box-shadow: 5px 5px 2px 0px rgba(121, 121, 121, 0.5);
+  background: #f2c318;
+  -webkit-transition: 0.2s;
+  transition: 0.2s; }
+  .platforms-web__download:hover {
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(121, 121, 121, 0.5);
+    box-shadow: 10px 10px 5px 0px rgba(121, 121, 121, 0.5); }
+
+@media screen and (max-width: 768px) {
+  .platforms-web h1 {
+    text-align: center; }
+  .platforms-web__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+    .platforms-web__flex ul {
+      width: auto; }
+  .platforms-web__download {
+    margin-top: 30px;
+    padding: 15px 50px;
+    font-size: 22px; } }
