--- a/forex/sass/style.scss
+++ b/forex/sass/style.scss
@@ -43,3 +43,4 @@
 @import 'blocks/mobile';
 @import 'blocks/platforms-desktop';
 @import 'blocks/platforms-mobile';
+@import 'blocks/platforms-web';
