--- a/forex-lp/sass/style.scss
+++ b/forex-lp/sass/style.scss
@@ -4,3 +4,7 @@
 @import 'global/fonts';
 
 @import 'blocks/header';
+@import 'blocks/form';
+@import 'blocks/string';
+@import 'blocks/miss';
+@import 'blocks/edge';
