--- a/forex-lp/css/style.css
+++ b/forex-lp/css/style.css
@@ -294,16 +294,76 @@ body {
   background: url("../img/edge-t.png") no-repeat top left; }
 
 .app {
-  height: 600px;
   padding: 120px 0;
   background: url("../img/test.png") no-repeat center; }
+
+.app__top {
+  width: 600px;
+  margin: auto;
+  color: #2f2861;
+  text-align: center; }
+  .app__top b {
+    font-size: 30px;
+    font-weight: bold;
+    font-family: 'SF UI Display'; }
+  .app__top p {
+    font-size: 20px;
+    font-family: 'SF UI Display Regular'; }
+  .app__top img {
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+    .app__top img:hover {
+      -webkit-transform: scale(1.1);
+      transform: scale(1.1); }
+
+.app__bottom {
+  width: 940px;
+  height: 430px;
+  margin: auto;
+  margin-top: 100px;
+  background: url("../img/app.png") no-repeat center; }
 
 .promo {
   padding: 25px 0;
   background: #2f2861; }
 
 .promo__logo {
-  width: 442px;
-  height: 141px;
+  width: 390px;
+  height: 124px;
   margin: auto;
-  background: url("../img/logo.png") no-repeat; }
+  background: url("../img/logo-promo.png") no-repeat; }
+
+.trading {
+  padding: 80px 0;
+  background: #dbd9e2; }
+  .trading h1 {
+    margin-top: 0;
+    color: #4a4a4a;
+    font-size: 32px;
+    font-weight: bold;
+    font-family: 'SF UI Display';
+    text-align: center; }
+    .trading h1 span {
+      color: #2f2861;
+      font-size: 48px;
+      text-transform: uppercase; }
+
+.trading__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+  .trading__flex ul {
+    color: #4a4a4a;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: 'SF UI Display';
+    line-height: 30px;
+    list-style-image: url("../img/li.png"); }
+    .trading__flex ul p {
+      color: #2f2861;
+      font-size: 14px;
+      font-weight: normal;
+      font-family: 'SF UI Display Regular'; }
