--- a/forex-lp/sass/blocks/promo.scss
+++ b/forex-lp/sass/blocks/promo.scss
@@ -4,8 +4,8 @@
 }
 
 .promo__logo {
-  width: 442px;
-  height: 141px;
+  width: 390px;
+  height: 124px;
   margin: auto;
-  background: url('../img/logo.png') no-repeat;
+  background: url('../img/logo-promo.png') no-repeat;
 }
