--- a/forex-lp/sass/style.scss
+++ b/forex-lp/sass/style.scss
@@ -11,3 +11,6 @@
 @import 'blocks/app';
 @import 'blocks/promo';
 @import 'blocks/trading';
+@import 'blocks/acc';
+@import 'blocks/pay';
+@import 'blocks/footer';
