--- a/forex-lp/sass/blocks/acc.scss
+++ b/forex-lp/sass/blocks/acc.scss
@@ -3,7 +3,8 @@
   text-align: center;
 
   & h1 {
-    margin-bottom: 60px;
+    margin-top: 0;
+    margin-bottom: 85px;
     color: $mc;
     font-size: 32px;
     font-weight: bold;
@@ -39,4 +40,28 @@
   margin: auto;
   margin-top: 85px;
   background: url('../img/shadow.png') no-repeat center;
+}
+
+@media screen and ($tablet-widths) {
+  .acc {
+    padding: 50px 0;
+  }
+  
+  .acc__shadow {
+    width: auto;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .acc {
+    
+    & a {
+      padding: 15px;
+      font-size: 19px;
+      
+      &:hover {
+        padding: 15px;
+      }
+    }
+  }
 }
