--- a/forex-lp/sass/blocks/header.scss
+++ b/forex-lp/sass/blocks/header.scss
@@ -1,5 +1,5 @@
 .header {
-  background: #d1e2ed url('../img/header-bg.png');
+  background: #d1e2ed url('../img/header-bg.png') no-repeat;  
   
   & img {
     margin: 30px 0 50px 0;
@@ -28,7 +28,7 @@
 
 .header__form {
   width: 500px;
-  height: 205px;
+  // height: 205px;
   padding: 15px;
   background: $mc;
   
@@ -37,5 +37,34 @@
     color: #fff;
     font-size: 24px;
     text-align: center;
+  }
+}
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .header {
+    
+    & img {
+      display: block;
+      width: 320px;
+      margin: auto;
+      margin-top: 0;
+      padding: 50px 0;
+    }
+    
+    & small {
+      padding-bottom: 50px;
+    }
+  }
+  
+  .header__title {
+    width: auto;
+    text-align: center;
+  }
+  
+  .header__form {
+    width: auto;
+    margin: auto;
   }
 }
