--- a/forex-lp/sass/blocks/pay.scss
+++ b/forex-lp/sass/blocks/pay.scss
@@ -4,8 +4,9 @@
 }
 
 .pay__methods {
-  width: 1250px;
+  width: 100%;
   height: 58px;
   margin: auto;
   background: url('../img/pay.png') no-repeat center;
+  background-size: contain;
 }
