--- a/forex-lp/sass/blocks/promo.scss
+++ b/forex-lp/sass/blocks/promo.scss
@@ -7,5 +7,14 @@
   width: 390px;
   height: 124px;
   margin: auto;
-  background: url('../img/logo-promo.png') no-repeat;
+  background: url('../img/logo-promo.png') no-repeat center;
+}
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .promo__logo {
+    width: 300px;
+    background-size: contain;
+  }
 }
