--- a/forex-lp/sass/blocks/trading.scss
+++ b/forex-lp/sass/blocks/trading.scss
@@ -31,6 +31,11 @@
     line-height: 30px;
     list-style-image: url('../img/li.png');
     
+    & li {
+      padding: 10px 0;
+      border-bottom: 1px solid #000;
+    }
+    
     & p {
       margin-bottom: 0;
       color: $mc;
