--- a/forex-lp/css/style.css
+++ b/forex-lp/css/style.css
@@ -3,8 +3,11 @@ body {
   margin: 0; }
 
 .container {
-  width: 90%;
+  width: 1100px;
   margin: auto; }
+
+.container--header {
+  width: 90%; }
 
 .visually-hidden {
   position: absolute;
@@ -364,7 +367,7 @@ body {
     margin-bottom: 0; } }
 
 .app {
-  padding: 120px 0;
+  padding: 70px 0;
   background: url("../img/test.png") no-repeat center; }
 
 .app__top {
@@ -449,6 +452,9 @@ body {
     font-family: 'SF UI Display';
     line-height: 30px;
     list-style-image: url("../img/li.png"); }
+    .trading__flex ul li {
+      padding: 10px 0;
+      border-bottom: 1px solid #000; }
     .trading__flex ul p {
       margin-bottom: 0;
       color: #2f2861;
