--- a/forex-lp/sass/global/base.scss
+++ b/forex-lp/sass/global/base.scss
@@ -4,9 +4,12 @@ body {
 }
 
 .container {
-  // width: 1100px;
-  width: 90%;
+  width: 1100px;
   margin: auto;
+}
+
+.container--header {
+  width: 90%;
 }
 
 .visually-hidden {
