--- a/forex-lp/css/style.css
+++ b/forex-lp/css/style.css
@@ -415,7 +415,7 @@ body {
   width: 390px;
   height: 124px;
   margin: auto;
-  background: url("../img/logo-promo.png") no-repeat center; }
+  background: url("../img/logo.svg") no-repeat center; }
 
 @media screen and (max-width: 768px) {
   .promo__logo {
