--- a/forex-lp/sass/blocks/promo.scss
+++ b/forex-lp/sass/blocks/promo.scss
@@ -7,7 +7,7 @@
   width: 390px;
   height: 124px;
   margin: auto;
-  background: url('../img/logo-promo.png') no-repeat center;
+  background: url('../img/logo.svg') no-repeat center;
 }
 
 @media screen and ($tablet-widths) {}
