--- a/forex-lp/sass/blocks/header.scss
+++ b/forex-lp/sass/blocks/header.scss
@@ -1,5 +1,6 @@
 .header {
-  background: #d1e2ed url('../img/header-bg.png') no-repeat;  
+  background: #d1e2ed url('../img/header-bg.png') no-repeat;
+  background-size: cover; 
   
   & img {
     margin: 30px 0 50px 0;
