--- a/forex-lp/css/style.css
+++ b/forex-lp/css/style.css
@@ -168,6 +168,7 @@ body {
   background: #d1e2ed url("../img/header-bg.png") no-repeat;
   background-size: cover; }
   .header img {
+    height: 141px;
     margin: 30px 0 50px 0; }
   .header b {
     display: block;
@@ -413,7 +414,6 @@ body {
   background: #2f2861; }
 
 .promo__logo {
-  width: 390px;
   height: 124px;
   margin: auto;
   background: url("../img/logo.svg") no-repeat center; }
