--- a/forex-lp/sass/blocks/promo.scss
+++ b/forex-lp/sass/blocks/promo.scss
@@ -4,7 +4,7 @@
 }
 
 .promo__logo {
-  width: 390px;
+  // width: 390px;
   height: 124px;
   margin: auto;
   background: url('../img/logo.svg') no-repeat center;
